# pulumi-supavisor-native

./: .golangci.yml  .goreleaser.darwin.yml  .goreleaser.yml  Makefile  go.work
.github/workflows/: manual.yml  push.yml  release.yml
deployment-templates/: README-DEPLOYMENT.md
provider/: go.mod  go.sum
provider/cmd/pulumi-gen-supavisor-native/: main.go  openapi.yml
provider/cmd/pulumi-resource-supavisor-native/: main.go  metadata.json  openapi_generated.yml  schema.json
provider/pkg/provider/: provider.go  provider_test.go  request.go
sdk/dotnet/: Provider.cs  Pulumi.SUPAVISOR_NATIVE.csproj  Utilities.cs
sdk/dotnet/Config/: Config.cs
sdk/dotnet/Tenants/: GetTenant.cs  Tenant.cs
sdk/dotnet/Tenants/Inputs/: TenantPropertiesArgs.cs  UserArgs.cs
sdk/dotnet/Tenants/Outputs/: Tenant.cs  TenantProperties.cs  User.cs
sdk/go/supavisor-native/: doc.go  init.go  provider.go
sdk/go/supavisor-native/config/: config.go
sdk/go/supavisor-native/internal/: pulumiUtilities.go
sdk/go/supavisor-native/tenants/: getTenant.go  init.go  pulumiTypes.go  tenant.go
sdk/nodejs/: index.ts  package.json  provider.ts  tsconfig.json  utilities.ts
sdk/nodejs/config/: vars.ts
sdk/nodejs/tenants/: getTenant.ts  index.ts  tenant.ts
sdk/nodejs/types/: input.ts  output.ts
sdk/python/: README.md  pyproject.toml
sdk/python/pulumi_supavisor_native/: README.md
